--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body{
+    background-color: lightgray;
+}
+
+header{
+    background-color: white;
+}
+
 .logo{
     vertical-align: middle;
     margin-left: 20px;
@@ -15,4 +23,49 @@ h1{
     vertical-align: middle;
     font-size: 2.5rem;
     font-weight: 800;
+}
+
+.separator{
+    height: 3px;
+    background-color: lightgrey;
+}
+
+.container{
+    max-width: 1020px;
+    margin: 30px auto;
+    background-color: white;
+    border-radius: 5px;
+}
+
+.main-nav{
+    padding: 10px 25px;
+}
+
+button{
+    color: gray;
+    font-size: 1.1rem;
+    background-color: white;
+    border: 1px solid grey;
+    border-radius: 5px;
+    padding: 5px 10px;
+}
+
+.btn-blue{
+    color: white;
+    background-color: rgb(0, 162, 255);
+}
+
+ul{
+    list-style-position: inside;
+    margin-bottom: 30px;
+    line-height: 30px;
+}
+
+h2{
+    display: inline;
+}
+
+.main-section{
+    padding-top: 35px;
+    padding-left: 25px;
 }
